--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,12 +1,139 @@
-#slideshow {
+.header-wrapper {
   position: relative;
 }
 
-#slideshow > div {
+.first-line {
+  display: flex;
+  width: 85%;
+  margin: 20px auto 10px auto;
+}
+
+.first-line p {
+  font-size: 13px;
+  color: rgb(84, 84, 84);
+}
+
+#logo {
+  height: 25px;
+  width: 150px;
+}
+
+.select-city {
+  width: 171px;
+  height: 36px;
+  background-color: #f4f4f4;
+  margin-left: 35px;
+}
+
+.select-experience {
+  width: 653px;
+  height: 35px;
+  background-color: #f4f4f4;
+  margin-left: 5px;
+}
+
+/* Slideshow */
+
+#slideshow {
+  position: relative;
+  height: 450px;
+}
+
+#slideshow > .img-crop {
   position: absolute;
 }
 
 .test {
   font-family: Avenir, proxima-nova, arial, sans-serif;
   color: #545454;
+}
+
+/* Search Bar */
+
+.search-bar {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-top: 14px;
+}
+
+.select-city-large {
+  width: 216px;
+  height: 54px;
+  border-radius: 3px;
+  box-shadow: 0 5px 18px 0 rgba(0, 0, 0, 0.1);
+  background: white;
+}
+
+.select-experience-large {
+  height: 54px;
+  width: 324px;
+  border-radius: 3px;
+  box-shadow: 0 5px 18px 0 rgba(0, 0, 0, 0.1);
+  margin-left: 5px;
+  background: white;
+}
+
+#go {
+  font-size: 16.2px;
+  line-height: 22.68px;
+  font-weight: 500;
+  width: 120px;
+  height: 54px;
+  border-radius: 3px;
+  border: none;
+  outline: none;
+  color: white;
+  background: linear-gradient(
+    -45deg,
+    #eb294b,
+    #e73c7e,
+    #dd2953,
+    #cd853f,
+    #ce1232,
+    #eb294b,
+    #e73c7e
+  );
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 10s ease infinite;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+@-webkit-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@-moz-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
