--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -2,10 +2,14 @@
   position: relative;
 }
 
+.wrap {
+  display: flex;
+  width: 81%;
+  margin: 10px auto 0 auto;
+}
+
 .first-line {
   display: flex;
-  width: 85%;
-  margin: 20px auto 10px auto;
 }
 
 .first-line p {
@@ -16,6 +20,7 @@
 #logo {
   height: 25px;
   width: 150px;
+  padding-top: 6px;
 }
 
 .select-city {
@@ -30,6 +35,55 @@
   height: 35px;
   background-color: #f4f4f4;
   margin-left: 5px;
+}
+
+.second-line {
+  display: flex;
+}
+
+.second-line p {
+  color: #545454;
+  font-size: 13px;
+  margin-right: 28px;
+  padding-top: 5px;
+}
+
+.best-picked {
+  display: flex;
+}
+
+.support {
+  display: flex;
+  margin-left: 198px;
+}
+
+.header-right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.header-right p {
+  color: #545454;
+  font-size: 13px;
+}
+
+.download-app {
+  display: flex;
+  align-items: center;
+}
+
+.download-app p {
+  margin-left: 5px;
+}
+
+#mobile-app {
+  max-width: 22px;
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-filter: invert(200%);
+  filter: invert(200%);
+  height: 22px;
 }
 
 /* Slideshow */
