--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,11 +1,15 @@
-.header-wrapper {
+.header-wrap {
   position: relative;
 }
 
-.wrap {
-  display: flex;
+.header-wrapper {
   width: 81%;
   margin: 10px auto 0 auto;
+  display: flex;
+}
+
+.header-left {
+  display: flex;
 }
 
 .first-line {
@@ -41,13 +45,13 @@
 .second-line {
   display: flex;
   cursor: pointer;
+  padding-top: 5px;
 }
 
 .second-line p {
   color: #545454;
   font-size: 13px;
-  margin-right: 28px;
-  padding-top: 5px;
+  margin-right: 30px;
 }
 
 .second-line p:hover {
@@ -60,13 +64,14 @@
 
 .support {
   display: flex;
-  margin-left: 198px;
+  margin-left: 130px;
 }
 
 .header-right {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin-left: 25px;
 }
 
 .header-right p {
