--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -46,6 +46,7 @@
   display: flex;
   cursor: pointer;
   padding-top: 5px;
+  justify-content: space-between;
 }
 
 .second-line p {
@@ -64,7 +65,12 @@
 
 .support {
   display: flex;
-  margin-left: 130px;
+  margin-left: 120px;
+  justify-content: flex-end;
+}
+
+.arrow-down {
+  padding-left: 5px;
 }
 
 .header-right {
@@ -72,6 +78,17 @@
   flex-direction: column;
   align-items: flex-end;
   margin-left: 25px;
+}
+
+.sign-in {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.sign-in-user {
+  color: #e8e8e8;
+  font-size: 20px;
 }
 
 .header-right p {
