--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -146,6 +146,7 @@
   border-radius: 3px;
   box-shadow: 0 5px 18px 0 rgba(0, 0, 0, 0.1);
   background: white;
+  cursor: pointer;
 }
 
 .select-experience-large {
