--- a/src/Components/top-cities.css
+++ b/src/Components/top-cities.css
@@ -2,6 +2,7 @@
   width: 85%;
   margin: 0px auto;
   height: 425px;
+  padding-top: 25px;
 }
 
 .top-cities-wrapper h1 {
@@ -12,23 +13,22 @@
 }
 
 .top-cities-carousel-wrap {
-  margin: 25px;
+  margin-top: 25px;
   height: 300px;
 }
 
 .city-card {
+  display: flex;
+  flex-direction: column;
   width: 216px;
   height: 270px;
-  box-shadow: -2px 6px 9px -2px rgba(140, 133, 140, 1);
-  margin: 10px;
-}
-
-.city-card {
   cursor: pointer;
   background-size: cover;
   border-radius: 5px;
   background-repeat: no-repeat;
   transition-duration: 2s;
+  margin: 10px;
+  box-shadow: -2px 4px 15px -3px rgba(0, 0, 0, 0.47);
 }
 
 #triangle {
@@ -38,28 +38,69 @@
   border-right: 200px solid transparent;
   border-left: 0px solid transparent;
   position: absolute;
-  top: 200px;
+  bottom: 55px;
+}
+
+.city-card:hover #triangle,
+.city-card:focus #triangle {
+  bottom: 63px;
 }
 
 .city-details {
   position: absolute;
-  bottom: 10px;
+  bottom: 5px;
   width: 216px;
+  min-height: 50px;
   background-color: white;
   transition: display 1s ease-in-out;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.city-details p {
+  color: #545454;
+  font-size: 13.5px;
+  text-align: left;
+  padding-left: 25px;
+  line-height: 15px;
+  margin: 0px;
+  padding-top: 7px;
+}
+
+.city-hidden {
+  display: none;
+}
+
+.city-hidden p {
+  font-size: 11.7px;
+  color: #9a9a9a;
+  margin: 0px;
+  padding-top: 0px;
+  line-height: 12px;
+}
+
+.city-card:hover .city-hidden,
+.city-card:focus .city-hidden {
+  display: block;
+  margin-bottom: 20px;
+  padding-top: 4px;
 }
 
 .expose {
-  display: none;
+  /* display: none; */
   transition-duration: 1s;
+  font-size: 11.7px;
+  color: #9a9a9a;
 }
-
+/* 
 .city-card:hover .expose,
 .city-card:focus .expose {
   display: block;
-}
+  font-size: 11.7px;
+  color: #9a9a9a;
+} */
 
 .city-arrow img {
   font-size: 20px;
