--- a/src/Components/headout-picks.css
+++ b/src/Components/headout-picks.css
@@ -96,10 +96,9 @@
   color: #545454;
   font-size: 13px;
   font-weight: 500;
-  line-height: 20px;
   text-align: left;
   margin: 0px;
-  padding-top: 6px;
+  padding-top: 5px;
 }
 
 .exp-content-wrap {
@@ -113,6 +112,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0 10px;
+  height: 45px;
 }
 
 .ratings-section {
@@ -155,4 +155,26 @@
   color: #545454;
   font-size: 19.8px;
   padding-bottom: 10px;
+}
+
+#like {
+  position: absolute;
+  top: 10;
+  left: 10;
+}
+
+.discount {
+  color: #49d1fd;
+  font-size: 11px;
+  text-align: left;
+  padding-left: 10px;
+}
+
+.discount p {
+  margin: 0px;
+  padding-top: 10px;
+}
+
+.discount i {
+  padding: 0 3px;
 }
