--- a/src/Components/Collections.css
+++ b/src/Components/Collections.css
@@ -92,3 +92,11 @@
   top: 0;
   left: 0;
 }
+
+/* Media Queries */
+
+@media only screen and (min-width: 1600px) {
+  .collections-wrapper {
+    width: 70%;
+  }
+}
