--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -71,3 +71,11 @@ h3 {
   padding-right: 7px;
   cursor: pointer;
 }
+
+/* Media Queries */
+
+@media only screen and (min-width: 1600px) {
+  .footer-wrapper {
+    width: 65%;
+  }
+}
