--- a/src/Components/media.css
+++ b/src/Components/media.css
@@ -57,3 +57,11 @@ h2 {
 /* .ratings img {
   padding-top: 5px;
 } */
+
+/* Media Queries */
+
+@media only screen and (min-width: 1600px) {
+  .media-section {
+    width: 70%;
+  }
+}
