--- a/src/Components/top-cities.css
+++ b/src/Components/top-cities.css
@@ -1,5 +1,7 @@
 .top-cities-wrapper {
   width: 85%;
+  display: flex;
+  flex-direction: column;
   margin: 0px auto;
   height: 425px;
   padding-top: 25px;
@@ -144,4 +146,12 @@
 
 .city-arrow img {
   font-size: 20px;
+}
+
+/* Media Queries */
+
+@media only screen and (min-width: 1600px) {
+  .top-cities-wrapper {
+    width: 70%;
+  }
 }
