--- a/src/Components/Header/background.css
+++ b/src/Components/Header/background.css
@@ -1,3 +1,7 @@
+.slider-div {
+  padding-top: 95px;
+}
+
 .div-one {
   background-image: url('https://cdn-imgix-open.headout.com/desktop-flaps/cashback-01.jpg?auto=compress&fm=webp&h=501&crop=faces&fit=min');
   background-size: cover;
