--- a/src/Components/Collections.css
+++ b/src/Components/Collections.css
@@ -95,6 +95,12 @@
 
 /* Media Queries */
 
+@media only screen and (min-width: 1200px) {
+  .collections-wrapper {
+    width: 95%;
+  }
+}
+
 @media only screen and (min-width: 1600px) {
   .collections-wrapper {
     width: 70%;
