Media Queries bug fixed

--- a/src/Components/top-cities.css
+++ b/src/Components/top-cities.css
@@ -144,7 +144,7 @@
 
 /* Media Queries */
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) and (max-width: 1300px) {
   .top-cities-wrapper {
     width: 95%;
   }
