--- a/src/Components/Collections.css
+++ b/src/Components/Collections.css
@@ -95,7 +95,7 @@
 
 /* Media Queries */
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) and (max-width: 1300px) {
   .collections-wrapper {
     width: 95%;
   }
