--- a/src/Components/headout-picks.css
+++ b/src/Components/headout-picks.css
@@ -181,7 +181,7 @@
 
 /* Media Queries */
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1200px) and (max-width: 1300px) {
   .headout-picks-wrapper {
     width: 95%;
   }
