--- a/src/Components/top-cities.css
+++ b/src/Components/top-cities.css
@@ -3,8 +3,9 @@
   display: flex;
   flex-direction: column;
   margin: 0px auto;
-  height: 425px;
+  height: 400px;
   padding-top: 25px;
+  border-bottom: 1px solid #e7e7e7;
 }
 
 .top-cities-wrapper h1 {
