--- a/src/Components/headout-picks.css
+++ b/src/Components/headout-picks.css
@@ -59,11 +59,46 @@
 .exp-card {
   width: 270px;
   height: 297px;
+  position: relative;
   box-shadow: -1px 4px 20px -3px rgba(80, 79, 79, 0.3);
   margin: 10px auto;
   cursor: pointer;
   -webkit-transition: -webkit-transform 0.3s ease-in-out;
   transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+
+.cashback {
+  padding: 0px 16px;
+  background: #4fc3f7;
+  position: absolute;
+  z-index: 1;
+  top: 15px;
+  left: -10px;
+  color: #fff;
+  border-top-right-radius: 0.3em;
+  border-bottom-right-radius: 0.3em;
+  -webkit-box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.1);
+}
+
+.exp-card .cashback:after {
+  content: '';
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 0;
+  border-top: 1em solid #545454;
+  position: absolute;
+  left: 0;
+  bottom: -1em;
+}
+
+.cashback p {
+  font-size: 9px;
+  padding: 5px 0px;
+  margin: 0;
+  font-weight: 700;
 }
 
 .exp-card:hover {
