Arrows in caraousel converted into IDs

--- a/src/Components/headout-picks.css
+++ b/src/Components/headout-picks.css
@@ -238,7 +238,7 @@
 
 /* Caraousel Arrows */
 
-.slick-arrow {
+#slick-arrow-left {
   position: absolute;
   z-index: 100;
   font-size: 18px;
@@ -253,7 +253,7 @@
   cursor: pointer;
 }
 
-.slick-arrow:hover {
+#slick-arrow-left:hover {
   color: #4fc3f7;
 }
 
@@ -261,7 +261,7 @@
   padding-top: 10px;
 }
 
-.slick-arrow-right {
+#slick-arrow-right {
   position: absolute;
   z-index: 100;
   font-size: 18px;
@@ -276,7 +276,7 @@
   cursor: pointer;
 }
 
-.slick-arrow-right:hover {
+#slick-arrow-right:hover {
   color: #4fc3f7;
 }
 
