--- a/src/Components/Header/background.css
+++ b/src/Components/Header/background.css
@@ -2,26 +2,7 @@
   padding-top: 95px;
 }
 
-.div-one {
-  background-image: url('https://cdn-imgix-open.headout.com/desktop-flaps/cashback-01.jpg?auto=compress&fm=webp&h=501&crop=faces&fit=min');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  width: 100%;
-  height: 430px;
-}
-
-.div-two {
-  background-image: url('https://cdn-imgix-open.headout.com/desktop-flaps/about-01-01.jpg?auto=compress&fm=webp&h=501&crop=faces&fit=min');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  width: 100%;
-  height: 430px;
-}
-
-.div-three {
-  background-image: url('https://cdn-imgix-open.headout.com/flaps/non-city-specific/desktop/experience-desktop.png?auto=compress&fm=webp&h=501&crop=faces&fit=min');
+.background-image-div {
   background-size: cover;
   background-repeat: no-repeat;
   background-position-x: center;
@@ -30,8 +11,9 @@
 }
 
 .slick-dots {
-  top: 400px;
+  top: 375px;
   position: absolute;
+  z-index: 100;
 }
 
 /* Media Queries */
@@ -41,9 +23,5 @@
   .div-two,
   .div-three {
     height: 500px;
-  }
-
-  .slick-dots {
-    top: 440px;
   }
 }
