--- a/src/Components/headout-picks.css
+++ b/src/Components/headout-picks.css
@@ -114,7 +114,7 @@
 }
 
 .exp-info-wrap {
-  padding-left: 10px;
+  padding-left: 12px;
   display: flex;
   flex-direction: column;
   margin: 0px;
@@ -123,9 +123,21 @@
 #exp-city {
   text-align: left;
   color: #9a9a9a;
+  font-weight: 500;
   font-size: 13px;
   margin: 0px;
   padding-top: 8px;
+  padding-bottom: 5px;
+}
+
+#exp-about {
+  text-align: left;
+  color: #b9b9b9;
+  font-size: 11px;
+  line-height: 15px;
+  padding-top: 8px;
+  margin-bottom: 3px;
+  margin-top: 0px;
 }
 
 #exp-description {
@@ -135,7 +147,6 @@
   font-weight: 500;
   text-align: left;
   margin: 0px;
-  padding-top: 5px;
   padding-right: 5px;
 }
 
@@ -158,7 +169,7 @@
   color: #49d1fd;
   font-size: 11px;
   text-align: left;
-  padding-bottom: 8px;
+  padding-bottom: 12px;
 }
 
 .discount p {
