--- a/src/Components/headout-picks.css
+++ b/src/Components/headout-picks.css
@@ -263,6 +263,31 @@
   left: 10;
 }
 
+/* View More */
+
+.show-more {
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(90deg, #fd8383, #ff2e73);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.show-more p {
+  margin: 0px;
+  background: -webkit-linear-gradient(45deg, #8f6b29, #fde08d, #df9f28);
+  background: linear-gradient(45deg, #8f6b29, #fde08d, #df9f28);
+  color: rgba(0, 0, 0, 0.8);
+  opacity: 0.9;
+  font-weight: 500;
+  font-size: 13.5px;
+  width: 140px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+}
+
 /* Media Queries */
 
 @media only screen and (min-width: 1200px) and (max-width: 1300px) {
