--- a/src/Components/Styles/top-cities.css
+++ b/src/Components/Styles/top-cities.css
@@ -142,6 +142,14 @@
   font-size: 20px;
 }
 
+.section-divide-hr {
+  width: 85%;
+  height: 1px;
+  margin-bottom: 0px;
+  background-color: #e7e7e7;
+  border: none;
+}
+
 /* Media Queries */
 
 @media only screen and (min-width: 1200px) and (max-width: 1300px) {
@@ -152,6 +160,10 @@
 
 @media only screen and (min-width: 1600px) {
   .top-cities-wrapper {
+    width: 70%;
+  }
+
+  .section-divide-hr {
     width: 70%;
   }
 }
